1.26.5
------
- Add ./configure --enable-xdebug (for the resampler issue).
- Avoid denormals in the resampler by adding an alternating offset
  (helps performance without -ffast-math, depending on platform).

1.26.4
------
- Clarify seeking documentation regarding samples and PCM frames.
- Fix build on MorphOS (patch by Ozkan Sezer, bug 295).
- Fix cmake build to install fmt123.h.
- Some cmake build fixes, tinyalsa addition by Maarten (bug 299).
- libmpg123: explicitly handle some irrelevant corner cases in tabinit
  (bug 279)

1.26.3
------
- Fix accurate (--enable-int-quality) and s32 x86-64 assembly for Windows ABI
  (thanks to Robert Kausch of fre:ac). The accurate code just crashed before.

1.26.2
------
- Enable terminal control by default only when both input and output
  are connected to a terminal. This avoids messing with terminal settings
  when piping stderr to a pager, which takes over terminal input anyway,
  while mpg123 still thinks it got control.
- Windows build fixes for UWP and without GetThreadErrorMode when not
  building modules, thanks to Steve LHomme.
- Android build fix regarding off64_t use, thanks to Steve LHomme.
- More CMake build fixes thanks to David Callu (bug 290).
- Use PROG_LIBS for output modules, to reinstate not necessarily proper but
  previous behaviour and fix FreeBSD port build (bug 291).
- Refine LFS support in libsyn123, avoiding architecture-dependent syn123.h
  (debian bug 963205).

1.26.1
------
- Fix cmake build by actually including the read_api_version file in the distro.
- Fix big-endian build, stupid omission of a variable declaration, semicolon
  (bug 289).
- Silence a harmless warning for build without realtime priority.

1.26.0
------

- Starting to intentionally use C99 in the codebase. API headers are still
  supposed to be compatible to C89.
- There is a make check target now with some simple tests.
  It is an open question how that should be developed in relation to the